manifests/manifests_app_auth/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-postgres-auth
  labels:
    app: app-postgres-auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-postgres-auth
  template:
    metadata:
      labels:
        app: app-postgres-auth
    spec:
      containers:
      - name: app-postgres-auth
        image: rosignol/gin_users_auth:0.1.1
        imagePullPolicy: IfNotPresent
        ports:
        - name: web
          containerPort: 8000
        # livenessProbe:
        #   httpGet:
        #     path: /api/healthchecker
        #     port: 8000
        #   initialDelaySeconds: 3
        #   periodSeconds: 3
