manifests/manifests_app_auth/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-postgres-auth
  labels:
    app: app-postgres-auth
spec:
  type: NodePort
  selector:
    app: app-postgres-auth
  ports:
    - port: 80
      targetPort: 8000
      name: metrics
