manifests/manifests_app_auth/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-postgres-auth
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
          paths:
            - path: /api/auth/.*
              pathType: ImplementationSpecific
              backend:
                service:
                  name: app-postgres-auth
                  port:
                    number: 8000
            - path: /api/auth
              pathType: Prefix
              backend:
                service:
                  name: app-postgres-auth
                  port:
                    number: 8000
